Изменения по истории заказов

--- a/local/templates/aspro_max_custom_b2b/components/bitrix/sale.personal.order.detail/main-b2b/style.css
+++ b/local/templates/aspro_max_custom_b2b/components/bitrix/sale.personal.order.detail/main-b2b/style.css
@@ -1567,3 +1567,24 @@ div.sale-order-detail-payment-options-methods-template {
 		text-align: center;
 	}
 }
+.sale-order-detail-b2b{
+	display: flex !important;
+    justify-content: space-between;
+    margin: 0px;
+    padding: 0px !important;
+    width: inherit !important;
+    align-items: center;
+}
+.order-b2b-container-detail{
+	margin: 0px !important;
+    width: 100% !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+.order-b2b-row{
+	width: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
